@@ -56,7 +56,7 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE
 
-./configure --program-prefix=gnu- --prefix `pwd`/inst
+./configure --program-prefix=gnu- --prefix `pwd`/inst --mandir `pwd`/inst/man
 $MAKE
 $MAKE test-install
 $MAKE uninstall
